--- a/app/views/checkout.html
+++ b/app/views/checkout.html
@@ -30,7 +30,7 @@
       <div id="payment-element">
         <!--Stripe.js injects the Payment Element-->
       </div>
-      <button id="submit" disabled="disabled">
+      <button id="submit">
         <div class="spinner hidden" id="spinner"></div>
         <span id="button-text">Faire un don</span>
       </button>
